// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Quote /> Rendering should render correctly with all fields 1`] = `
<div
  authorStyle={
    Object {
      "color": "blue",
    }
  }
  className="quote-wrap quote"
  contentStyle={
    Object {
      "color": "red",
    }
  }
  quoteStyle={Object {}}
>
  <div
    className="quote__mark"
  >
    ”
  </div>
  <blockquote
    cite="https://blog.hubspot.com/sales/18-motivational-quotes-to-start-your-day-list"
    className="quote__content"
  >
    <p>
      Be patient with yourself. Self-growth is tender; it's holy ground. There's no greater investment. Be patient with yourself. Self-growth is tender; it's holy ground. There's no greater investment.
    </p>
    <footer
      className="quote__author"
    >
      <cite>
        Stephen Covey
      </cite>
      <span>
        , 
      </span>
      <cite>
        My company
      </cite>
    </footer>
  </blockquote>
</div>
`;

exports[`<Quote /> Rendering should render correctly with no author 1`] = `
<div
  authorStyle={Object {}}
  className="quote-wrap quote"
  contentStyle={Object {}}
  quoteStyle={Object {}}
>
  <div
    className="quote__mark"
  >
    ”
  </div>
  <blockquote
    cite="https://blog.hubspot.com/sales/18-motivational-quotes-to-start-your-day-list"
    className="quote__content"
  >
    <p>
      Be patient with yourself. Self-growth is tender; it's holy ground. There's no greater investment. Be patient with yourself. Self-growth is tender; it's holy ground. There's no greater investment.
    </p>
    <footer
      className="quote__author"
    >
      <cite>
        My company
      </cite>
    </footer>
  </blockquote>
</div>
`;

exports[`<Quote /> Rendering should render correctly with no company 1`] = `
<div
  authorStyle={Object {}}
  className="quote-wrap quote"
  contentStyle={Object {}}
  quoteStyle={Object {}}
>
  <div
    className="quote__mark"
  >
    ”
  </div>
  <blockquote
    cite="https://blog.hubspot.com/sales/18-motivational-quotes-to-start-your-day-list"
    className="quote__content"
  >
    <p>
      Be patient with yourself. Self-growth is tender; it's holy ground. There's no greater investment. Be patient with yourself. Self-growth is tender; it's holy ground. There's no greater investment.
    </p>
    <footer
      className="quote__author"
    >
      <cite>
        Stephen Covey
      </cite>
    </footer>
  </blockquote>
</div>
`;
